# Shooting-Trajectory-Planner

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: sim.launch  test (copy).launch  test.launch
launch/rviz_config/: sim_traj.rviz  test_traj.rviz
msg/: alpha_msgs.msg  coeff_msgs.msg
src/: alpha_check_node.cpp  trajectory_generator_node.cpp  trajectory_generator_sim_node.cpp  trajectory_generator_waypoint.cpp
src/alpha_generator/: alpha_generator_node.py
